# ChangeLog for media-video/istanbul
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/istanbul/ChangeLog,v 1.8 2006/07/28 18:11:30 zaheerm Exp $

*istanbul-0.2.1 (28 Jul 2006)

  28 Jul 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +istanbul-0.2.1.ebuild:
  version bump

  25 Jul 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  istanbul-0.2.0-r1.ebuild:
  add build dep on new version of intltool

  21 Jul 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  istanbul-0.2.0-r1.ebuild:
  addpredict on /root/.gnome2

  18 Jul 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  istanbul-0.2.0-r1.ebuild:
  fix plugin deps

  18 Jul 2006; John N. Laliberte <allanonjl@gentoo.org>
  istanbul-0.2.0-r1.ebuild:
  add intltoolize line, fixes #140906

*istanbul-0.2.0-r1 (17 Jul 2006)

  17 Jul 2006; John N. Laliberte <allanonjl@gentoo.org>
  +istanbul-0.2.0-r1.ebuild:
  disable py compiling, use python eclass instead.

  15 Jul 2006; <zaheerm@gentoo.org> istanbul-0.2.0.ebuild:
  add description and iuse

*istanbul-0.2.0 (13 Jul 2006)

  13 Jul 2006; <zaheerm@gentoo.org> +metadata.xml, +istanbul-0.2.0.ebuild:
  Initial Ebuild
