@@ -1,6 +1,10 @@
 # ChangeLog for media-video/istanbul
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/istanbul/ChangeLog,v 1.8 2006/07/28 18:11:30 zaheerm Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/istanbul/ChangeLog,v 1.9 2007/01/22 02:20:49 compnerd Exp $
+
+  22 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  istanbul-0.2.0.ebuild, istanbul-0.2.0-r1.ebuild, istanbul-0.2.1.ebuild:
+  Fix gconf depatom
 
 *istanbul-0.2.1 (28 Jul 2006)
 
